Update exercise sheet with more regularization tasks

--- a/ex2/MLonMCU_Ex2.ipynb
+++ b/ex2/MLonMCU_Ex2.ipynb
@@ -33,7 +33,7 @@
     "    random.seed(123)\n",
     "\n",
     "    for p in x:\n",
-    "        y.append(10 + 0.5*p - 0.08*p**2 - 0.002*p**3 + 0.0003*p**4 - 0.00001*p**5 + random.randint(-noise,noise)/100)\n",
+    "        y.append(10 + 0.5*p - 0.04*p**2 - 0.002*p**3 + 0.0003*p**4 - 0.00001*p**5 + random.randint(-noise,noise)/100)\n",
     "  \n",
     "    return x, y \n"
    ]
@@ -49,7 +49,7 @@
     "# Generate some data based on parameters\n",
     "lowest = 10\n",
     "highest = 20\n",
-    "amount = 100\n",
+    "amount = 200\n",
     "\n",
     "x, y = generate_data(lowest, highest, amount)\n",
     "\n",
@@ -61,12 +61,12 @@
     "\n",
     "\n",
     "for i, deg in enumerate(degrees):\n",
-    "    plt.scatter(x, y)\n",
+    "    plt.scatter(x, y, label = \"Data\", color='red', alpha=0.5)\n",
     "    plt.title(\"Polynomial Regression\")\n",
     "    p, residuals, rank, singular_values, rcond = np.polyfit(x, y, deg, full=True)\n",
     "    print(residuals)\n",
     "    models.append(np.poly1d(p))\n",
-    "    plt.plot(line, models[i](line), label = \"n=\"+str(deg))\n",
+    "    plt.plot(line, models[i](line), label = \"Order n=\"+str(deg))\n",
     "    plt.legend()\n",
     "    plt.show() \n",
     "\n",
@@ -81,8 +81,8 @@
     "# Plot without fitting to see how the models generalize\n",
     "for i, deg in enumerate(degrees):\n",
     "    plt.title(\"Polynomial Regression\")\n",
-    "    plt.scatter(x, y, c=\"C{}\".format(0))\n",
-    "    plt.plot(line, models[i](line), label = \"n=\"+str(deg))\n",
+    "    plt.scatter(x, y, label = \"Data\", color='red', alpha=0.5)\n",
+    "    plt.plot(line, models[i](line), label = \"Order n=\"+str(deg))\n",
     "    plt.legend()\n",
     "    plt.show() \n"
    ]
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# regularization"
+    "# Regularization"
    ]
   },
   {
@@ -100,12 +100,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense\n",
-    "from tensorflow.keras.losses import MeanSquaredError\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.random import set_seed\n",
-    "\n",
+    "import tensorflow as tf\n",
+    "print(f'Your tensorflow version is {tf.__version__}')\n",
+    "print(f'Your numpy version is {np.__version__}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def shuffle_lists(x, y):\n",
     "    data = list(zip(x, y))\n",
     "    random.shuffle(data)\n",
@@ -114,12 +119,10 @@
     "    y = np.asarray(y)\n",
     "    return x, y\n",
     "\n",
-    "def normalize_data(x):\n",
-    "    mean = np.mean(x)\n",
-    "    x = x-mean\n",
-    "    dev = np.max(x)\n",
-    "    x = x/dev\n",
-    "    return x, mean, dev\n",
+    "def normalize_data(data):\n",
+    "    mean = np.mean(data)\n",
+    "    dev = np.std(data)\n",
+    "    return (data - mean) / dev, mean, dev\n",
     "\n",
     "def generate_data(lowest, highest, amount):\n",
     "    x = np.linspace(lowest, highest, num=amount)\n",
@@ -141,10 +144,16 @@
    },
    "outputs": [],
    "source": [
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.losses import MeanSquaredError\n",
+    "from tensorflow.random import set_seed\n",
+    "\n",
     "# Model configuration\n",
     "dropout   = False\n",
     "batchnorm = False\n",
-    "normalize = True\n",
+    "normalize = False\n",
     "\n",
     "batch_size = 16\n",
     "no_epochs = 100\n",
@@ -152,41 +161,44 @@
     "validation_split = 0.1\n",
     "plot_name = \"plot_default.pdf\"\n",
     "\n",
+    "def custom_activation(x):\n",
+    "    return tf.math.square(x)\n",
+    "\n",
     "# Regularization techniques\n",
     "if dropout:\n",
-    "    from tensorflow.keras.layers import Dropout\n",
     "    dropout_rate = 0.2\n",
-    "    dropout = True\n",
     "    plot_name = \"plot_dropout.pdf\"\n",
     "if batchnorm:\n",
-    "    from tensorflow.keras.layers import BatchNormalization\n",
-    "    batchnorm = True\n",
     "    plot_name = \"plot_batchnorm.pdf\"\n",
     "\n",
     "# Generate data\n",
     "dataset_size = 100\n",
     "\n",
+    "# Ensure generate_data and shuffle_lists functions are defined and return NumPy arrays\n",
     "x, y = generate_data(10, 20, dataset_size)\n",
     "input_train, target_train =  shuffle_lists(x, y)\n",
     "\n",
-    "validation_size = 10\n",
+    "validation_size = 50\n",
     "x, y = generate_data(8, 22, validation_size)\n",
     "input_test, target_test =  shuffle_lists(x, y)\n",
     "\n",
     "if normalize:\n",
     "    input_train, mean_in, dev_in = normalize_data(input_train)\n",
     "    target_train, mean_tar, dev_tar = normalize_data(target_train)\n",
-    "    input_test = (input_test-mean_in)/dev_in\n",
-    "    target_test = (target_test-mean_tar)/dev_tar\n",
+    "    input_test = (input_test - mean_in) / dev_in\n",
+    "    target_test = (target_test - mean_tar) / dev_tar\n",
     "\n",
     "input_train  = input_train.reshape(len(input_train), 1)\n",
     "target_train = target_train.reshape(len(target_train), 1)\n",
     "input_test   = input_test.reshape(len(input_test), 1)\n",
     "target_test  = target_test.reshape(len(target_test), 1)\n",
     "\n",
+    "input_train = input_train.astype(np.float32)\n",
+    "target_train = target_train.astype(np.float32)\n",
+    "\n",
     "# Create the model\n",
     "model = Sequential()\n",
-    "model.add(Dense(16, activation=lambda x: x**2, input_dim=1))\n",
+    "model.add(Dense(16, activation=custom_activation, input_dim=1))\n",
     "model.add(Dense(512, activation='elu'))\n",
     "if dropout:\n",
     "    model.add(Dropout(dropout_rate))\n",
@@ -197,7 +209,7 @@
     "# Compile the model\n",
     "model.compile(loss=MeanSquaredError(),\n",
     "              optimizer=optimizer,\n",
-    "              metrics=['accuracy'])\n",
+    "              metrics=['mean_squared_error'])\n",
     "\n",
     "# Fit model to data\n",
     "set_seed(123)\n",
@@ -226,19 +238,21 @@
     "\n",
     "# Plot predictions\n",
     "if normalize:\n",
-    "  linspace = np.linspace(-1.4, 1.4, 100)\n",
+    "    linspace = np.linspace(-2.5, 2.5, 100)\n",
     "else:\n",
-    "  linspace = np.linspace(8, 22, 100)\n",
+    "    linspace = np.linspace(8, 22, 100)\n",
+    "\n",
+    "linspace = linspace.reshape(-1, 1)\n",
     "\n",
     "pred = model.predict(linspace)\n",
-    "ax[1].scatter(input_test, target_test, label='Data')\n",
+    "ax[1].scatter(input_test, target_test, label='Data', color='red', alpha=0.5)\n",
     "ax[1].plot(linspace, pred, label='Model')\n",
     "ax[1].set_title('Predictions')\n",
     "ax[1].legend()\n",
     "\n",
     "# Save plot\n",
     "plt.tight_layout()\n",
-    "fig.show()"
+    "plt.show()\n"
    ]
   },
   {
